--- a/trufflebox-ui/package.json
+++ b/trufflebox-ui/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-json-view": "^2.0.0-alpha.39",
-    "axios": "^1.7.7",
+    "axios": "^1.12.0",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "mathjs": "^14.5.3",
@@ -36,7 +36,13 @@
     "postcss": ">=8.4.31",
     "nth-check": ">=2.0.1",
     "form-data": ">=3.0.4",
-    "glob": ">=11.1.0"
+    "body-parser": ">=1.20.3",
+    "path-to-regexp": ">=0.1.12",
+    "rollup": ">=2.79.2",
+    "http-proxy-middleware": ">=2.0.9",
+    "cross-spawn": ">=7.0.5",
+    "glob": ">=10.5.0",
+    "node-forge": ">=1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
